--- a/slides/NLP-CNN.tex
+++ b/slides/NLP-CNN.tex
@@ -76,7 +76,8 @@
 \begin{frame}{Basic Convolution  + Pooling}
 \begin{scriptsize}
 \begin{itemize}
-\item Sentences are usually modelled as sequences of word embeddings.
+\item Sentences are usually modeled as sequences of word embeddings.
+\item These embeddings can be obtained either from pre-trained word embeddings or from an embedding layer.
 \item The CNN applies  nonlinear (learned) functions or ``filters'' mapping windows of $k$ words into scalar values.
 \item Several filters can be applied, resulting in an $l$-dimensional vector (one dimension per filter).
 \item The filters capture relevant properties of the words in the window.
@@ -105,7 +106,7 @@ to combine the vectors resulting from the different windows into a single $l$-di
   \begin{figure}[h]
         	\includegraphics[scale = 0.28]{pics/CNN.png}
         \end{figure}
- \footnotemark{Source: \cite{goldberg2016primer}}   
+ \footnotemark{Source: \cite{goldberg2017neural}}   
 \end{frame}
 
 
@@ -156,7 +157,7 @@ in the sequence.
 \begin{frame}{1D Convolutions over Text}
 \begin{scriptsize}
 \begin{itemize}
-\item The main idea behind the convolution layer is to apply the same parameterised function over all $k$-grams in the sequence.
+\item The main idea behind the convolution layer is to apply the same parameterized function over all $k$-grams in the sequence.
 \item This creates a sequence of $m$ vectors, each representing
 a particular $k$-gram in the sequence.
 \item The representation is sensitive to the identity and order of the words within a $k$-gram.
@@ -174,15 +175,18 @@ a particular $k$-gram in the sequence.
 \item These vectors are then combined (pooled) into a single vector $c \in \mathcal{R}^l$ representing the entire sequence.
 \item Max pooling: this operator takes the maximum value across each dimension (most common pooling operation).
 \begin{displaymath}
-c_[j]= \max_{1< i \leq m} p_{i[j]} \quad \forall j \in [1,l]
+\vec{c}_{[j]}= \max_{1< i \leq m} \vec{p}_{i[j]} \quad \forall j \in [1,l]
 \end{displaymath}
+
+where $\vec{p}_{i[j]}$ denotes the $j$-th component of $\vec{p}_{i}$. 
 
 \item Average Pooling (second most common): takes the average value of each index:
 \begin{displaymath}
-c = \frac{1}{m} \sum_{i=1}^{m}p_i
+\vec{c} = \frac{1}{m} \sum_{i=1}^{m}\vec{p}_i
 \end{displaymath}
 
-\item Ideally, the vector $c$ will capture the essence of the important information in the sequence. 
+
+\item Ideally, the vector $\vec{c}$ will capture the essence of the important information in the sequence. 
 
 \end{itemize}
 \end{scriptsize}
@@ -193,15 +197,15 @@ c = \frac{1}{m} \sum_{i=1}^{m}p_i
 \begin{frame}{Vector Pooling}
 \begin{scriptsize}
 \begin{itemize}
-\item The nature of the important information that needs to be encoded in the vector $c$ is task dependent. 
+\item The nature of the important information that needs to be encoded in the vector $\vec{c}$ is task dependent. 
 \item If we are performing sentiment classification, the essence are informative ngrams that indicate
 sentiment.
 \item If we are performing topic-classification, the essence are informative $n$-grams that indicate a particular topic.
 
-\item During training, the vector $c$ is fed into downstream network layers (i.e., an MLP), culminating in an output layer which is used for prediction.
+\item During training, the vector $\vec{c}$ is fed into downstream network layers (i.e., an MLP), culminating in an output layer which is used for prediction.
 \item The training procedure of the network calculates the loss with respect to the prediction task, and the error gradients are propagated all the way back through the pooling and convolution layers, as well as the embedding layers. 
 \item The training process tunes the convolution matrix $U$, the bias vector $\vec{b}$, the downstream network, and
-potentially also the embeddings matrix $E$\footnote{While some people leave the embedding layer fixed during training, others allow the parameters to change.}  such that the vector $c$ resulting from the convolution
+potentially also the embeddings matrix $E$\footnote{While some people leave the embedding layer fixed during training, others allow the parameters to change.}  such that the vector $\vec{c}$ resulting from the convolution
 and pooling process indeed encodes information relevant to the task at hand.
 \end{itemize}
 \end{scriptsize}
@@ -214,8 +218,8 @@ and pooling process indeed encodes information relevant to the task at hand.
 \begin{itemize}
 \item A convolutional neural network architecture for Twitter sentiment classification is developed in \cite{Severyn2015}.
 \item  Each tweet is represented as a matrix whose columns correspond to the words in the tweet, preserving the order in which they occur.
-\item  The words are represented by dense vectors or embeddings trained from a large corpus of unlabelled tweets using word2vec.
-\item  The network is formed by the following layers: an input layer with the given tweet matrix, a  single  convolutional layer, a rectified linear activation function, a max pooling layer, and a soft-max classification layer.
+\item  The words are represented by dense vectors or embeddings trained from a large corpus of unlabeled tweets using word2vec.
+\item  The network is formed by the following layers: an input layer with the given tweet matrix, a  single  convolutional layer, a rectified linear activation function, a max pooling layer, and a softmax classification layer.
 \end{itemize}
 \end{scriptsize}
 \end{frame}
@@ -225,7 +229,7 @@ and pooling process indeed encodes information relevant to the task at hand.
 \begin{scriptsize}
 \begin{itemize}
 \item  The weights of the neural network are pre-trained using emoticon-annotated data, and then trained with the hand-annotated tweets from the SemEval competition.
-\item   Experimental results show that the pre-training phase allows for a proper initialisation of the network's weights, and hence, has a positive impact on classification accuracy. 
+\item   Experimental results show that the pre-training phase allows for a proper initialization of the network's weights, and hence, has a positive impact on classification accuracy. 
 \end{itemize}
   \begin{figure}[h]
         	\includegraphics[scale = 0.45]{pics/cnn-twitter.png}
@@ -240,7 +244,7 @@ and pooling process indeed encodes information relevant to the task at hand.
 \begin{scriptsize}
 \begin{itemize}
 \item CNNs architectures for NLP are rather shallow in comparison to the deep convolutional networks which have pushed the state-of-the-art in computer vision.
-\item A new architecture (VDCNN) for text processing which operates directly at the character level and uses only small convolutions and pooling operations is proposed in \cite{conneau2017very}.
+\item A text processing neural architecture (VDCNN) that operates directly at the character level and uses only small convolutions and pooling operations is proposed in \cite{conneau2017very}.
 
 \item Character-level embeddings are used instead of word-embeddings.
 
@@ -250,7 +254,7 @@ and pooling process indeed encodes information relevant to the task at hand.
 
 \item Most notorious improvements are achieved on large datasets.
 
-\item First paper showing the the benefits  of  depth architectures for NLP.
+\item One of the first words showing the the benefits of  depth neural architectures for NLP.
 \end{itemize}
 \end{scriptsize}
 \end{frame}
