--- a/slides/NLP-introduction.tex
+++ b/slides/NLP-introduction.tex
@@ -574,13 +574,14 @@ of (shallow) machine learning and statistical models (e.g., Naive Bayes, HMMs, I
 
 
 \begin{frame}{Roadmap}
-In this course we will introduce modern concepts in natural language processing based on \textbf{statistical models} (second wave) and \textbf{neural networks} (third wave). The main concepts to be convered are listed below:
+In this course we will introduce modern concepts in natural language processing based on \textbf{statistical models} (second wave) and \textbf{neural networks} (third wave). The main concepts to be covered are listed below:
 \begin{scriptsize}
 \begin{enumerate}
 \item Text classification.
 \item Linear Models.
 \item Naive Bayes.
 \item Hidden Markov Models.
+\item Maximum Entropy Markov Models (MEMMs) and Condional Random Fields (CRFs).
 \item Neural Networks.
 \item Word embeddings.
 \item Convolutional Neural Networks (CNNs) 
