Minor changes on assignment 2

--- a/assignments/assignment_2/Assignment_2_baseline.ipynb
+++ b/assignments/assignment_2/Assignment_2_baseline.ipynb
@@ -19,7 +19,7 @@
       "version": "3.7.0"
     },
     "colab": {
-      "name": "Tarea2.ipynb",
+      "name": "Tarea_2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true
@@ -57,10 +57,7 @@
         "\n",
         "**Named Entity Recognition (NER)**\n",
         "\n",
-        "En esta instancia en particular, trabajaremos con la task Named Entity Recognition (NER). Su objetivo consiste en localizar y clasificar los tokens que representan personas (**PER**), organizaciones (**ORG**), lugares (**LOC**) y expresiones de tiempo y cantidades (**MISC**). \n",
-        "\n",
-        "Adicionalmente, dado que existen entidades representadas en mas de un token, se utiliza la notación **BIO: Beginning, Inside, Outside.**. Es decir, si encuentro una entidad, el primer token etiquetado será precedido por B, el segundo por I y los n restantes por I. Por otra parte, si el token no representa ninguna entidad nombrada, se representa por O. \n",
-        "\n",
+        "Esta tarea consiste en localizar y clasificar los tokens de una oración que representen entidades nombradas. Es decir, tokens que simbolicen (1) **personas**, (2) **organizaciones**, (3) **lugares** y (4) **adjetivos, eventos y otras entidades que no entren en las categorías anteriores** deberán ser taggeados como (1) **PER**, (2) **ORG**, (3) **LOC** y (4) **MISC** respectivamente. Adicionalmente, dado que existen entidades representadas en más de un token (como La Serena), se utiliza la notación BIO como prefijo al tag: Beginning, Inside, Outside. Es decir, si encuentro una entidad, el primer token etiquetado será precedido por B, el segundo por I y los n restantes por I. Por otra parte, si el token no representa ninguna entidad nombrada, se representa por O. Un ejemplo de esto es:\n",
         "\n",
         "Por ejemplo:\n",
         "\n",
@@ -157,32 +154,32 @@
       "metadata": {
         "id": "kHuIwP_oMGU-",
         "colab_type": "code",
-        "outputId": "43426fa7-2686-4bde-cdc0-e00e14ae05f3",
+        "outputId": "2e9b02cb-4de8-4152-eb03-8f7003a92708",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 312
+          "height": 321
         }
       },
       "source": [
         "# Instalar torchtext\n",
         "!pip3 install --upgrade torchtext"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting torchtext\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/43/94/929d6bd236a4fb5c435982a7eb9730b78dcd8659acf328fd2ef9de85f483/torchtext-0.4.0-py3-none-any.whl (53kB)\n",
-            "\r\u001b[K     |██████▏                         | 10kB 25.9MB/s eta 0:00:01\r\u001b[K     |████████████▍                   | 20kB 1.7MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 30kB 2.5MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 40kB 1.7MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▉ | 51kB 2.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 61kB 2.0MB/s \n",
-            "\u001b[?25hRequirement already satisfied, skipping upgrade: six in /usr/local/lib/python3.6/dist-packages (from torchtext) (1.12.0)\n",
-            "Requirement already satisfied, skipping upgrade: torch in /usr/local/lib/python3.6/dist-packages (from torchtext) (1.3.1)\n",
+            "\r\u001b[K     |██████▏                         | 10kB 18.9MB/s eta 0:00:01\r\u001b[K     |████████████▍                   | 20kB 2.1MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 30kB 3.0MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 40kB 2.0MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▉ | 51kB 2.5MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 61kB 2.3MB/s \n",
+            "\u001b[?25hRequirement already satisfied, skipping upgrade: tqdm in /usr/local/lib/python3.6/dist-packages (from torchtext) (4.28.1)\n",
             "Requirement already satisfied, skipping upgrade: numpy in /usr/local/lib/python3.6/dist-packages (from torchtext) (1.17.4)\n",
-            "Requirement already satisfied, skipping upgrade: tqdm in /usr/local/lib/python3.6/dist-packages (from torchtext) (4.28.1)\n",
             "Requirement already satisfied, skipping upgrade: requests in /usr/local/lib/python3.6/dist-packages (from torchtext) (2.21.0)\n",
+            "Requirement already satisfied, skipping upgrade: torch in /usr/local/lib/python3.6/dist-packages (from torchtext) (1.3.1)\n",
+            "Requirement already satisfied, skipping upgrade: six in /usr/local/lib/python3.6/dist-packages (from torchtext) (1.12.0)\n",
             "Requirement already satisfied, skipping upgrade: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->torchtext) (2.8)\n",
-            "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->torchtext) (2019.9.11)\n",
             "Requirement already satisfied, skipping upgrade: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->torchtext) (1.24.3)\n",
+            "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->torchtext) (2019.9.11)\n",
             "Requirement already satisfied, skipping upgrade: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->torchtext) (3.0.4)\n",
             "Installing collected packages: torchtext\n",
             "  Found existing installation: torchtext 0.3.1\n",
@@ -322,7 +319,7 @@
         "%%capture\n",
         "!wget https://github.com/dccuchile/CC6205/releases/download/Data/train_NER_esp.txt  # Dataset de Entrenamiento\n",
         "!wget https://github.com/dccuchile/CC6205/releases/download/Data/val_NER_esp.txt    # Dataset de Validación (Para probar y ajustar el modelo)\n",
-        "!wget https://github.com/dccuchile/CC6205/releases/download/Data/test_NER_esp.txt   # Dataset de la Competencia"
+        "!wget https://github.com/dccuchile/CC6205/releases/download/Data/test_NER_esp.txt   # Dataset de la Competencia. Estos datos solo contienen los tokens. ¡¡SON LOS QUE DEBEN SER PREDICHOS!!"
       ],
       "execution_count": 0,
       "outputs": []
@@ -363,10 +360,10 @@
       "metadata": {
         "id": "Hu7q3HCliia5",
         "colab_type": "code",
-        "outputId": "179ef819-af90-431e-a36f-438696f59b0f",
+        "outputId": "e6e5bbe9-f13d-4faf-f6e4-8ce8205057d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 71
         }
       },
       "source": [
@@ -374,7 +371,7 @@
         "print(f\"Number of validation examples: {len(valid_data)}\")\n",
         "print(f\"Number of testing examples: {len(test_data)}\")"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,10 +399,10 @@
       "metadata": {
         "id": "MnD0VMvviia9",
         "colab_type": "code",
-        "outputId": "554637ee-6baa-4f6b-96cb-a9169147d42c",
+        "outputId": "4d5c0b8e-cbd9-46f4-d364-2e89ee1660cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 295
+          "height": 1000
         }
       },
       "source": [
@@ -416,26 +413,66 @@
         "for word, tag in zip(random_example['text'], random_example['nertags']):\n",
         "  print(word, '\\t', tag)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "( \t O\n",
-            "OV2037 \t B-MISC\n",
-            ") \t O\n",
-            "FENIL \t B-ORG\n",
-            "PREVE \t O\n",
-            "CONSTITUIR \t O\n",
-            "INTERPROFESIONAL \t O\n",
-            "LACTEA \t O\n",
-            "EN \t O\n",
-            "PROXIMAS \t O\n",
-            "SEMANA \t O\n",
-            "Oviedo \t B-LOC\n",
-            "( \t O\n",
-            "EFE \t B-ORG\n",
-            ") \t O\n",
+            "La \t O\n",
+            "quinta \t O\n",
+            "edición \t O\n",
+            "del \t O\n",
+            "Festival \t B-MISC\n",
+            "de \t I-MISC\n",
+            "Teatro \t I-MISC\n",
+            "en \t I-MISC\n",
+            "la \t I-MISC\n",
+            "Calle \t I-MISC\n",
+            ", \t O\n",
+            "que \t O\n",
+            "organiza \t O\n",
+            "anualmente \t O\n",
+            "el \t O\n",
+            "Ayuntamiento \t B-ORG\n",
+            "de \t I-ORG\n",
+            "Villanueva \t I-ORG\n",
+            "de \t I-ORG\n",
+            "la \t I-ORG\n",
+            "Serena \t I-ORG\n",
+            "con \t O\n",
+            "la \t O\n",
+            "colaboración \t O\n",
+            "de \t O\n",
+            "la \t O\n",
+            "Consejería \t B-ORG\n",
+            "de \t I-ORG\n",
+            "Cultura \t I-ORG\n",
+            "de \t I-ORG\n",
+            "la \t I-ORG\n",
+            "Junta \t I-ORG\n",
+            "de \t I-ORG\n",
+            "Extremadura \t I-ORG\n",
+            ", \t O\n",
+            "tendrá \t O\n",
+            "lugar \t O\n",
+            "del \t O\n",
+            "12 \t O\n",
+            "al \t O\n",
+            "15 \t O\n",
+            "de \t O\n",
+            "julio \t O\n",
+            ", \t O\n",
+            "anunció \t O\n",
+            "hoy \t O\n",
+            "el \t O\n",
+            "concejal \t O\n",
+            "de \t O\n",
+            "Cultura \t B-MISC\n",
+            "villanovense \t O\n",
+            ", \t O\n",
+            "Gregorio \t B-PER\n",
+            "Gil \t I-PER\n",
+            "Ruedas \t I-PER\n",
             ". \t O\n"
           ],
           "name": "stdout"
@@ -489,7 +526,7 @@
         "print(f\"Tokens únicos en TEXT: {len(TEXT.vocab)}\")\n",
         "print(f\"Tokens únicos en NER_TAGS: {len(NER_TAGS.vocab)}\")"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +562,7 @@
       "source": [
         "print(NER_TAGS.vocab.itos)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,7 +600,7 @@
         "# Tokens mas frecuentes\n",
         "print(TEXT.vocab.freqs.most_common(20))"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,7 +626,7 @@
         "# Tokens con los primeros 10 indices del vocabulario.\n",
         "print(TEXT.vocab.itos[:10])"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -617,7 +654,7 @@
         "    if tok[0] == \"<\":\n",
         "        print(tok)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -665,7 +702,7 @@
         "for tag, count, percent in tag_percentage(NER_TAGS.vocab.freqs.most_common()):\n",
         "    print(f\"{tag}\\t{count}\\t{percent*100:4.1f}%\")"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -872,7 +909,7 @@
         "        \n",
         "model.apply(init_weights)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -910,7 +947,7 @@
         "\n",
         "print(f'El modelo tiene {count_parameters(model):,} parámetros entrenables.')"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -978,7 +1015,7 @@
         "# Los primeros 2 embeddings representan UNK y PAD\n",
         "print(model.embedding.weight.data)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1334,7 +1371,7 @@
         "    print(f'\\tTrain Loss: {train_loss:.3f} | Train f1: {train_f1:.2f} | Train precision: {train_precision:.2f} | Train recall: {train_recall:.2f}')\n",
         "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. f1: {valid_f1:.2f} | Val. precision: {valid_precision:.2f} | Val. recall: {valid_recall:.2f}')"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1413,7 +1450,7 @@
       "source": [
         "model.load_state_dict(torch.load('modelo_tarea_2.pt'))"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1456,18 +1493,18 @@
       "metadata": {
         "id": "s0gVbP8yiicj",
         "colab_type": "code",
+        "outputId": "556c26dc-cf29-4a7e-e13a-294358442cf3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "556c26dc-cf29-4a7e-e13a-294358442cf3"
+        }
       },
       "source": [
         "valid_loss, valid_precision, valid_recall, valid_f1 = evaluate(model, valid_iterator, criterion)\n",
         "\n",
         "print(f'Val. Loss: {valid_loss:.3f} |  Val. f1: {valid_f1:.2f} | Val. precision: {valid_precision:.2f} | Val. recall: {valid_recall:.2f}')"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1586,7 +1623,7 @@
         "print(tags[0])\n",
         "print(sentences[0])"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1653,7 +1690,7 @@
       "source": [
         "print(\"Número de palabras: {}, Número de tags predichos: {}\".format(sum([len(sent) for sent in filter_sentences]),sum([len(sent) for sent in filter_labels])))"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
